# switchyard

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
benches/: scheduling.rs
src/: affinity.rs  error.rs  lib.rs  task.rs  threads.rs  util.rs  worker.rs
tests/: interface.rs  panic.rs  simple.rs  threads.rs  ub.rs
