[package]
name = "switchyard"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Real-time compute focused async executor"
readme = "README.md"
repository = "https://github.com/BVE-Reborn/switchyard"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []

[dependencies]
arrayvec = "0.5"
bitflags = "1"
futures-task = "0.3"
futures-intrusive = "0.3"
num_cpus = "1"
parking_lot = "0.10"
priority-queue = "1"

[dev-dependencies]
async-std = "1.6"
futures-executor = "0.3"

[profile.release]
debug = false
lto = "thin"
