[package]
name = "switchyard"
version = "0.3.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Real-time compute focused async executor"
readme = "README.md"
repository = "https://github.com/BVE-Reborn/switchyard"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []

[[bench]]
name = "scheduling"
harness = false

[dependencies]
bitflags = "2"
futures-intrusive = "0.4"
futures-task = "0.3"
num_cpus = "1"
parking_lot = "0.11"
priority-queue = "1"
slotmap = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
affinity = "0.1"

[dev-dependencies]
async-std = "1.6"
criterion = "0.3"
flume = "0.10"
futures-executor = "0.3"

[profile.bench]
debug = true
lto = "thin"

[profile.release]
debug = false
lto = "thin"
